--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=(***INSERT GOOGLE MAPS API KEY HERE!!! ****)&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDO1chQiHeK_csxfK0sho1VPqYSRYOL1Vc&libraries=places"
       defer
     ></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
